# isa-archive

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  cli.md  examples.md  limitations.md
docs/compiler/: README.md  build-and-use.md  roles-and-coverage.md
docs/development/: README.md  architecture.md  behavior-ir.md  extending.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/qemu/: README.md  build-and-run.md
docs/targets/: README.md  assembler.md  cpp-isa.md  intrinsics.md  reference-manuals.md  verilog.md
docs/tutorial/: 01-hello-pico32.md  02-a-real-instruction-set.md  03-compiling-c.md  04-growing-the-isa.md  README.md
docs/yaml/: README.md  behavior.md  instructions.md  isa.md  project.md  registers.md  schemas.md  types.md  uarch.md
examples/: README.md  view-docs.sh
examples/demo/: 01_build_qemu.sh  02_build_llvm.sh  03_run_demo.sh  README.md  common.sh
examples/minimips/: README.md  constants.yaml  isa.yaml  schemas.yaml
examples/npu-probe/: README.md  instructions.yaml  isa.yaml  schemas.yaml
examples/scripts/: build_qemu_target.sh  build_qemu_test.sh  qemu_test_harness.c  (+1 more)
tests/: test_assembler.py  test_behavior.py  test_codegen_generality.py  test_cpp_isa.py  test_docs.py  test_generators.py  test_inheritance.py  test_llvm_compiler.py  test_models.py  test_output_quality.py  test_project.py  test_qemu_interrupts.py  test_qemu_wide.py  test_registry.py  test_scalar_types.py  test_shaped_registers.py  test_software.py  test_traps.py
(+233 files in other folders)
